[package]
name = "om-fork-distance-field"
version = "0.1.8"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>", "Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/AndreasOM/om-fork-distance-field"

readme = "README.md"
description = "Temporary fork! Generate distance fields from images for pseudo-vector rendering"
documentation = "https://docs.rs/distance-field"

repository = "https://github.com/AndreasOM/om-fork-distance-field.git"
keywords = ["image", "SDF", "gamedev", "vector"]
categories = ["games", "rendering", "game-engines", "multimedia"]

[badges]
# travis-ci = {repository = "tversteeg/distance-field"}

[dependencies]
spiral = "0.1.9"
image = "0.24.2"

[[example]]
name = "generator"
path = "examples/generator.rs"

[dev-dependencies]
docopt = "1.1.1"
