[package]
name = "om-fork-distance-field"
version = "0.2.2"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>", "Thomas Versteeg <thomasversteeg@gmx.com>"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/AndreasOM/om-fork-distance-field"

readme = "README.md"
description = "Temporary fork! Generate distance fields from images for pseudo-vector rendering"
documentation = "https://docs.rs/distance-field"

repository = "https://github.com/AndreasOM/om-fork-distance-field.git"
keywords = ["image", "SDF", "gamedev", "vector"]
categories = ["games", "rendering", "game-engines", "multimedia"]

[badges]
# travis-ci = {repository = "tversteeg/distance-field"}

[dependencies]
spiral = "0.2.0"
image = "0.25.9"
bitvec = "1.0.1"

[dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5.1", default-features = false }
docopt = "1.1.1"

[[example]]
name = "generator"
path = "examples/generator.rs"

[[bench]]
name = "bench"
harness = false
